test/unittest/error/tst.DTRACEFLT_DIVZERO.r.p
#!/bin/sed -f
# The last argument has an unpredictable value.
/^The arguments/s/ [0-9][0-9]*$/ #/
